# CS2-Trade-up-Contracts-Opt

./: README.md  ga_tutorial.py  generator_.py  inspect_data.ipynb  metric.py  price.csv  pyproject.toml  selected_hierarchy.json  user_config.json.example  yyid_high_tier_weapons.txt
docs/: math_formulas.md
notebooks/: inspect.ipynb
recipe_optimize/: code_here.md  utilities.py
recipe_optimize/data_model/: response_model.py
relevants/: cs2_terms.py
scrape/: temp.py  test.py
src/cs2/: config.py  ga_fitness.py  utilities.py
src/cs2/optimize/: utilities.py
src/cs2/scrape/: __init__.py  get_cs2_goods_info.py  get_cs2_id.py  manual_logging.py  scraper.py  throttle.py
